@@ -1,0 +1,2 @@
+(fn getenv (x)
+  (%aref process.env x))
